[package]
name = "stdr-refline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.11", features = ["derive"] }
dxf = "0.5.0"
getset = "0.1.2"
serde = "1.0.171"
serde_derive = "1.0.171"
toml = "0.7.6"
